tests/machine/x/ocaml/join_multi.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/join_multi.ml", line 36, characters 35-42:
36 | let customers = [[("id",1);("name","Alice")];[("id",2);("name","Bob")]]
                                        ^^^^^^^
Error: This expression has type string but an expression was expected of type
         int


Context (around line 36):
  34 | let string_slice s i j = String.sub s i (j - i)
  35 | 
  36 | let customers = [[("id",1);("name","Alice")];[("id",2);("name","Bob")]]
  37 | let orders = [[("id",100);("customerId",1)];[("id",101);("customerId",2)]]
  38 | let items = [[("orderId",100);("sku","a")];[("orderId",101);("sku","b")]]
